Fix upgrade blacklist on regions and nations upgrades